[gd_scene load_steps=10 format=3 uid="uid://cm02eajp3cjmh"]

[ext_resource type="Script" path="res://Scenes/Trip.gd" id="1_buynv"]
[ext_resource type="Script" path="res://Scenes/PassangerPickupArea.gd" id="2_32dmm"]
[ext_resource type="PackedScene" path="res://Scenes/passanger.tscn" id="3_kf1cb"]
[ext_resource type="Script" path="res://Scenes/Destination.gd" id="4_wio7x"]
[ext_resource type="Script" path="res://Scenes/celebrating.gd" id="5_bl5u5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_xeo7p"]

[sub_resource type="SphereShape3D" id="SphereShape3D_h5xax"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fvij0"]
albedo_color = Color(0.639216, 0, 0, 1)

[sub_resource type="TorusMesh" id="TorusMesh_uxe5l"]
material = SubResource("StandardMaterial3D_fvij0")
inner_radius = 1.884
outer_radius = 2.007

[node name="TripManager" type="Node3D" node_paths=PackedStringArray("PassangerPrefab", "DestinationPrefab", "CelebratingPrefab")]
script = ExtResource("1_buynv")
PassangerPrefab = NodePath("PassangerPickupArea")
DestinationPrefab = NodePath("Destination")
CelebratingPrefab = NodePath("celebrating")

[node name="PassangerPickupArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.66102, 0.449506, 10.402)
script = ExtResource("2_32dmm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PassangerPickupArea"]
transform = Transform3D(8.845, 0, 0, 0, 8.845, 0, 0, 0, 8.845, 0, 0, 0)
shape = SubResource("SphereShape3D_xeo7p")

[node name="passanger" parent="PassangerPickupArea" instance=ExtResource("3_kf1cb")]

[node name="Armature_001" parent="PassangerPickupArea/passanger" index="0"]
transform = Transform3D(0.01, 0, 0, 0, -4.37114e-10, -0.01, 0, 0.01, -4.37114e-10, 0, 0, 0)

[node name="Skeleton3D" parent="PassangerPickupArea/passanger/Armature_001" index="0"]
bones/0/position = Vector3(-9.9995, 9.92049, -97.8414)
bones/0/rotation = Quaternion(-0.682864, 0.00301179, -0.00631105, 0.730512)
bones/1/rotation = Quaternion(-0.0615254, 9.29988e-06, -0.00102988, 0.998105)
bones/2/position = Vector3(0, 11.639, -1.96695e-06)
bones/2/rotation = Quaternion(-0.0244259, 0.000341844, -0.00505353, 0.999689)
bones/3/rotation = Quaternion(-0.0244258, 0.000341846, -0.00505353, 0.999689)
bones/4/position = Vector3(0, 14.9644, 7.15256e-07)
bones/4/rotation = Quaternion(0.0690221, 0.0075495, -0.0109368, 0.997527)
bones/5/position = Vector3(4.32134e-07, 7.46871, 2.57754)
bones/5/rotation = Quaternion(0.0197392, 0.0070009, -0.0112958, 0.999717)
bones/7/position = Vector3(6.41092, 13.4166, -0.0949278)
bones/7/rotation = Quaternion(-0.480771, -0.543295, 0.448786, -0.521805)
bones/8/position = Vector3(-5.36914e-07, 13.8182, 2.05763e-05)
bones/8/rotation = Quaternion(-0.331076, -0.293644, 0.341522, 0.829171)
bones/9/position = Vector3(-5.16958e-06, 26.9993, -1.51974e-06)
bones/9/rotation = Quaternion(3.40629e-05, -0.0510659, -1.43105e-06, 0.998695)
bones/10/position = Vector3(-2.51473e-06, 21.9229, -1.72433e-07)
bones/10/rotation = Quaternion(-0.212735, -0.311776, 0.0507588, 0.924642)
bones/11/position = Vector3(-2.83224, 3.43162, 1.23363)
bones/11/rotation = Quaternion(0.0287833, 0.116506, 0.270243, 0.955284)
bones/12/position = Vector3(-0.422433, 3.66961, 5.83398e-06)
bones/12/rotation = Quaternion(0.0470615, -0.0881208, -0.0786154, 0.991887)
bones/13/position = Vector3(-0.0214095, 3.52582, 8.19099e-06)
bones/13/rotation = Quaternion(-0.000293823, -0.00422104, 0.0757125, 0.997121)
bones/14/position = Vector3(0.443821, 3.02856, -3.57628e-06)
bones/15/position = Vector3(-3.61485, 10.9735, 0.195004)
bones/15/rotation = Quaternion(0.189601, -0.0615331, -0.0517063, 0.978566)
bones/16/position = Vector3(0.0144011, 3.1614, -1.16544e-05)
bones/16/rotation = Quaternion(0.245787, 0.000261212, -0.013935, 0.969224)
bones/17/position = Vector3(-0.014794, 2.98977, 1.33265e-06)
bones/17/rotation = Quaternion(-3.17772e-09, 9.55966e-05, 0.00255286, 0.999997)
bones/18/position = Vector3(0.000390291, 2.57791, -4.64916e-05)
bones/19/position = Vector3(-1.06117, 11.0445, -0.278744)
bones/19/rotation = Quaternion(0.221978, -0.0499631, 0.00625296, 0.973751)
bones/20/position = Vector3(0.0102785, 3.40164, -3.29006e-06)
bones/20/rotation = Quaternion(0.153189, -2.65507e-05, 0.0054581, 0.988182)
bones/21/position = Vector3(-0.0163788, 3.2758, -6.53718e-06)
bones/21/rotation = Quaternion(-2.00459e-07, 0.000102718, 0.00357654, 0.999994)
bones/22/position = Vector3(0.00608706, 2.84151, -1.84327e-05)
bones/23/position = Vector3(1.25511, 11.0719, -0.325486)
bones/23/rotation = Quaternion(0.184456, -0.0703088, 0.0262742, 0.979971)
bones/24/position = Vector3(-0.0027647, 2.78694, 6.31508e-06)
bones/24/rotation = Quaternion(0.265814, 0.0001799, 0.0151655, 0.963905)
bones/25/position = Vector3(0.000914335, 2.79432, 2.95505e-06)
bones/25/rotation = Quaternion(2.07658e-07, -3.70895e-06, 0.00024215, 1)
bones/26/position = Vector3(0.00185609, 2.35644, 1.99378e-05)
bones/27/position = Vector3(3.42091, 9.97892, 0.105529)
bones/27/rotation = Quaternion(0.116188, -0.00884473, 0.0580906, 0.991488)
bones/28/position = Vector3(0.0188599, 2.73535, 4.16907e-06)
bones/28/rotation = Quaternion(0.417102, -0.000655526, 0.0348255, 0.908192)
bones/29/position = Vector3(-0.00612164, 2.25053, 9.94376e-06)
bones/29/rotation = Quaternion(6.03632e-07, -0.000163806, -0.00193213, 0.999998)
bones/30/position = Vector3(-0.0127246, 1.93173, -3.48091e-05)
bones/31/position = Vector3(-6.41092, 13.428, -0.210417)
bones/31/rotation = Quaternion(0.47646, -0.564429, 0.393596, 0.547254)
bones/32/position = Vector3(9.99818e-07, 13.8182, 2.40611e-06)
bones/32/rotation = Quaternion(-0.290687, 0.185998, -0.227776, 0.910507)
bones/33/position = Vector3(-1.37917e-06, 26.9689, -6.03335e-06)
bones/33/rotation = Quaternion(3.48813e-05, 0.101401, -1.14024e-06, 0.994846)
bones/34/position = Vector3(-3.44822e-06, 21.9222, 9.26531e-07)
bones/34/rotation = Quaternion(-0.271274, 0.355121, 0.0632162, 0.892358)
bones/35/position = Vector3(2.9545, 3.55195, 1.36519)
bones/35/rotation = Quaternion(0.00435959, 0.063687, -0.211212, 0.975353)
bones/36/position = Vector3(0.627422, 3.80267, 6.75166e-07)
bones/36/rotation = Quaternion(0.0184738, 0.0213617, 0.00668908, 0.999579)
bones/37/position = Vector3(0.0718117, 3.39658, 2.39492e-06)
bones/37/rotation = Quaternion(-0.000808598, 0.00656491, -0.143302, 0.989657)
bones/38/position = Vector3(-0.699243, 2.56162, 1.00136e-05)
bones/39/position = Vector3(3.69657, 11.0422, 0.16515)
bones/39/rotation = Quaternion(0.179982, 0.100014, -0.0239254, 0.97828)
bones/40/position = Vector3(-0.0112083, 3.19862, 1.50158e-06)
bones/40/rotation = Quaternion(0.143782, -0.000133924, 0.0128983, 0.989525)
bones/41/position = Vector3(0.0121636, 2.98137, 1.54411e-05)
bones/41/rotation = Quaternion(1.90019e-06, -7.38583e-05, -0.00224873, 0.999997)
bones/42/position = Vector3(-0.000958681, 2.46919, -2.36034e-05)
bones/43/position = Vector3(1.03786, 10.9596, -0.357017)
bones/43/rotation = Quaternion(0.12274, 0.0364629, -0.0654272, 0.989608)
bones/44/position = Vector3(-0.00762975, 3.52083, -4.85717e-06)
bones/44/rotation = Quaternion(0.243162, -8.46767e-06, -0.00654369, 0.969964)
bones/45/position = Vector3(0.0118794, 3.30566, -2.72237e-07)
bones/45/rotation = Quaternion(3.34815e-08, -5.96278e-05, -0.00253018, 0.999997)
bones/46/position = Vector3(-0.00424546, 2.9441, 1.40071e-06)
bones/47/position = Vector3(-1.15949, 10.8768, -0.177061)
bones/47/rotation = Quaternion(0.153508, 0.124034, -0.038328, 0.979583)
bones/48/position = Vector3(-0.00106221, 2.89943, 8.1692e-06)
bones/48/rotation = Quaternion(0.334305, 0.000709023, -0.025329, 0.942124)
bones/49/position = Vector3(0.0100378, 2.85052, -1.47933e-06)
bones/49/rotation = Quaternion(3.80296e-07, 1.08611e-05, -0.0036121, 0.999994)
bones/50/position = Vector3(-0.00898266, 2.4219, 1.04606e-05)
bones/51/position = Vector3(-3.57493, 10.2633, -0.0282701)
bones/51/rotation = Quaternion(0.167109, 0.00886489, -0.110745, 0.979659)
bones/52/position = Vector3(-0.00354511, 2.65866, -1.26887e-05)
bones/52/rotation = Quaternion(0.316672, -0.000449304, -0.0433415, 0.947544)
bones/53/position = Vector3(0.00824165, 2.16164, 7.63174e-06)
bones/53/rotation = Quaternion(8.86964e-07, -4.76986e-05, -0.00323576, 0.999995)
bones/54/position = Vector3(-0.00469208, 1.75512, 1.50204e-05)
bones/55/position = Vector3(8.69879, -5.51937, -0.0576701)
bones/55/rotation = Quaternion(-0.0818651, -0.0208563, 0.99433, -0.0645831)
bones/56/position = Vector3(-1.5893e-06, 41.6621, 5.93136e-08)
bones/56/rotation = Quaternion(-0.000222588, 0.00550342, -0.0152705, 0.999868)
bones/57/rotation = Quaternion(0.520142, -0.178408, 0.0415102, 0.834206)
bones/58/rotation = Quaternion(0.326718, -0.0119778, 0.0396064, 0.944216)
bones/60/position = Vector3(-8.69879, -5.51937, -0.119318)
bones/60/rotation = Quaternion(-0.166185, 0.0392518, 0.985099, 0.0205269)
bones/61/position = Vector3(6.50529e-07, 41.6601, -1.97761e-08)
bones/61/rotation = Quaternion(-0.0644456, 0.000405657, 0.0157674, 0.997797)
bones/62/rotation = Quaternion(0.526686, 0.0142535, -0.0197927, 0.84971)
bones/63/rotation = Quaternion(0.325606, 0.0317028, -0.0281488, 0.944555)

[node name="Area3D" type="Area3D" parent="PassangerPickupArea/passanger"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PassangerPickupArea/passanger/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21212, 0)
shape = SubResource("SphereShape3D_h5xax")

[node name="Destination" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.32251, 0.381743, 0.679792)
script = ExtResource("4_wio7x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Destination"]
transform = Transform3D(8.845, 0, 0, 0, 8.845, 0, 0, 0, 8.845, 0, 0, 0)
shape = SubResource("SphereShape3D_xeo7p")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Destination"]
transform = Transform3D(2.191, 0, 0, 0, 1.03, 0, 0, 0, 2.191, 0, 5.03296, 0)
mesh = SubResource("TorusMesh_uxe5l")

[node name="celebrating" parent="." instance=ExtResource("3_kf1cb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.6324, 0.433486, 2.12626)
script = ExtResource("5_bl5u5")

[node name="Armature_001" parent="celebrating" index="0"]
transform = Transform3D(0.01, 0, 0, 0, -4.37114e-10, -0.01, 0, 0.01, -4.37114e-10, 0, 0, 0)

[node name="Skeleton3D" parent="celebrating/Armature_001" index="0"]
bones/0/position = Vector3(-46.5806, 48.2812, -38.4828)
bones/0/rotation = Quaternion(-0.557081, 0.275261, -0.337504, 0.707094)
bones/1/position = Vector3(5.06639e-07, 9.92774, -0.982879)
bones/1/rotation = Quaternion(0.178098, 0.045026, -0.0270974, 0.982608)
bones/2/position = Vector3(-2.98023e-08, 11.639, -5.02913e-07)
bones/2/rotation = Quaternion(0.0619161, 0.0133005, -0.0165536, 0.997855)
bones/3/position = Vector3(4.47035e-08, 13.3017, 1.84774e-06)
bones/3/rotation = Quaternion(0.0620504, 0.0125388, -0.0168902, 0.997851)
bones/4/position = Vector3(5.02914e-08, 14.9644, 3.61076e-07)
bones/4/rotation = Quaternion(0.0271348, -0.00773203, 0.0196488, 0.999409)
bones/5/position = Vector3(-4.17233e-07, 7.46873, 2.57753)
bones/5/rotation = Quaternion(-0.0222583, -0.00643071, 0.0200379, 0.999531)
bones/6/position = Vector3(4.76837e-07, 20.9734, 7.23818)
bones/7/position = Vector3(6.41092, 13.4166, -0.0949271)
bones/7/rotation = Quaternion(-0.609613, -0.363725, 0.613431, -0.346091)
bones/8/position = Vector3(5.66647e-08, 13.8182, -1.60257e-05)
bones/8/rotation = Quaternion(0.316265, -0.110206, 0.176125, 0.925641)
bones/9/position = Vector3(1.80777e-06, 26.9993, 1.37728e-06)
bones/9/rotation = Quaternion(-0.0389668, -0.000178471, 0.130936, 0.990625)
bones/10/position = Vector3(2.29884e-06, 21.9229, -1.4689e-06)
bones/10/rotation = Quaternion(-0.0926121, -0.123999, 0.000796357, 0.987951)
bones/11/position = Vector3(-2.83224, 3.43163, 1.23365)
bones/11/rotation = Quaternion(0.336832, -0.578849, 0.218696, 0.709683)
bones/12/position = Vector3(-0.42242, 3.6696, -2.20872e-05)
bones/12/rotation = Quaternion(-0.0190075, 0.163482, -0.00621136, 0.986344)
bones/13/position = Vector3(-0.0214212, 3.52582, 2.30504e-05)
bones/13/rotation = Quaternion(-0.127417, 0.0794671, 0.00182624, 0.988659)
bones/14/position = Vector3(0.443834, 3.02856, -8.34465e-06)
bones/15/position = Vector3(-3.61484, 10.9735, 0.195015)
bones/15/rotation = Quaternion(-0.00389056, 0.0016405, 0.0972036, 0.995256)
bones/16/position = Vector3(0.0144106, 3.16139, 2.40911e-05)
bones/16/rotation = Quaternion(0.0762938, 4.21291e-06, -3.67265e-05, 0.997085)
bones/17/position = Vector3(-0.0148026, 2.98977, -1.89373e-05)
bones/17/rotation = Quaternion(-0.16888, 0.000648458, 0.015787, 0.98551)
bones/18/position = Vector3(0.000391483, 2.57792, -4.41074e-05)
bones/19/position = Vector3(-1.06117, 11.0445, -0.278734)
bones/19/rotation = Quaternion(-0.0317346, 0.0034017, 0.0198025, 0.999294)
bones/20/position = Vector3(0.0102789, 3.40163, -1.25812e-06)
bones/20/rotation = Quaternion(0.0991396, 0.000277703, -0.00227753, 0.995071)
bones/21/position = Vector3(-0.0163749, 3.27581, 7.10226e-06)
bones/21/rotation = Quaternion(-0.160295, 0.000975617, 0.0109324, 0.987008)
bones/22/position = Vector3(0.00610101, 2.84151, -2.03997e-05)
bones/23/position = Vector3(1.25512, 11.0719, -0.325473)
bones/23/rotation = Quaternion(0.064433, 0.00244246, -0.0357062, 0.99728)
bones/24/position = Vector3(-0.00276041, 2.78693, 5.79524e-06)
bones/24/rotation = Quaternion(0.00387746, -4.06546e-05, -0.00242898, 0.99999)
bones/25/position = Vector3(0.000905514, 2.79432, -2.45192e-06)
bones/25/rotation = Quaternion(-0.103152, 0.000159608, 0.0129034, 0.994582)
bones/26/position = Vector3(0.00186133, 2.35643, 2.57194e-05)
bones/27/position = Vector3(3.42091, 9.97892, 0.105549)
bones/27/rotation = Quaternion(0.144458, 0.00529785, -0.143844, 0.978986)
bones/28/position = Vector3(0.0188527, 2.73533, -1.38487e-05)
bones/28/rotation = Quaternion(0.0937025, 3.03404e-06, -2.58452e-05, 0.9956)
bones/29/position = Vector3(-0.00611949, 2.25055, -2.19874e-06)
bones/29/rotation = Quaternion(-0.0714216, -0.00117284, 0.0133807, 0.997356)
bones/30/position = Vector3(-0.0127201, 1.93173, -3.016e-05)
bones/31/position = Vector3(-6.41092, 13.428, -0.210418)
bones/31/rotation = Quaternion(0.630994, -0.371777, 0.529153, 0.428516)
bones/32/position = Vector3(-2.61732e-07, 13.8182, -2.93035e-05)
bones/32/rotation = Quaternion(0.309664, -0.0869911, -0.346814, 0.881057)
bones/33/position = Vector3(-6.9557e-07, 26.9689, 1.07294e-07)
bones/33/rotation = Quaternion(-0.0152879, -0.0117825, -0.345546, 0.938203)
bones/34/position = Vector3(-5.89843e-07, 21.9222, -4.27086e-06)
bones/34/rotation = Quaternion(-0.150657, -0.0215731, -0.127994, 0.980028)
bones/35/position = Vector3(2.95451, 3.55196, 1.36519)
bones/35/rotation = Quaternion(0.330653, 0.694424, -0.239784, 0.592408)
bones/36/position = Vector3(0.627425, 3.80269, 4.27712e-06)
bones/36/rotation = Quaternion(-0.0822254, -0.241302, 0.0451353, 0.965906)
bones/37/position = Vector3(0.0718007, 3.39657, 6.40186e-06)
bones/37/rotation = Quaternion(-0.141953, -0.129903, 0.00433033, 0.981303)
bones/38/position = Vector3(-0.699241, 2.56161, 1.32322e-05)
bones/39/position = Vector3(3.69657, 11.0422, 0.165159)
bones/39/rotation = Quaternion(0.0653134, -0.00345962, -0.00935752, 0.997815)
bones/40/position = Vector3(-0.0112035, 3.19862, -3.26364e-06)
bones/40/rotation = Quaternion(0.122927, -0.00060784, 0.00557708, 0.9924)
bones/41/position = Vector3(0.012157, 2.98137, 4.081e-05)
bones/41/rotation = Quaternion(0.0386879, 0.00035688, 0.00813218, 0.999218)
bones/42/position = Vector3(-0.000960559, 2.46919, -2.94819e-05)
bones/43/position = Vector3(1.03786, 10.9596, -0.357009)
bones/43/rotation = Quaternion(0.0444316, -0.00153574, 0.01694, 0.998868)
bones/44/position = Vector3(-0.00762284, 3.5208, 7.64694e-06)
bones/44/rotation = Quaternion(0.0860002, -0.000230966, 0.00235318, 0.996292)
bones/45/position = Vector3(0.0118766, 3.30567, -5.67608e-05)
bones/45/rotation = Quaternion(-0.0214986, 0.000249882, 0.00358502, 0.999762)
bones/46/position = Vector3(-0.00424737, 2.9441, 2.68219e-07)
bones/47/position = Vector3(-1.15949, 10.8768, -0.17706)
bones/47/rotation = Quaternion(0.0884587, 0.00146889, 0.052938, 0.994671)
bones/48/position = Vector3(-0.00106394, 2.89942, 1.42865e-05)
bones/48/rotation = Quaternion(0.0767861, -0.000199067, 0.00225094, 0.997045)
bones/49/position = Vector3(0.0100321, 2.85052, -1.21663e-06)
bones/49/rotation = Quaternion(-0.0702754, 0.00052243, 0.00374377, 0.997521)
bones/50/position = Vector3(-0.00898123, 2.4219, 1.45733e-05)
bones/51/position = Vector3(-3.57492, 10.2634, -0.0282661)
bones/51/rotation = Quaternion(0.117968, 0.000542411, 0.0277338, 0.99263)
bones/52/position = Vector3(-0.00354719, 2.65865, 1.15983e-05)
bones/52/rotation = Quaternion(0.088299, -0.000298866, 0.00317365, 0.996089)
bones/53/position = Vector3(0.00824356, 2.16163, 2.33166e-05)
bones/53/rotation = Quaternion(-0.0833881, 1.96133e-05, 0.000179766, 0.996517)
bones/54/position = Vector3(-0.00469971, 1.75512, 3.57628e-07)
bones/55/position = Vector3(8.69879, -5.51937, -0.0576716)
bones/55/rotation = Quaternion(0.0457629, 0.692545, 0.639449, -0.330745)
bones/56/position = Vector3(2.84849e-08, 41.6621, -4.44787e-07)
bones/56/rotation = Quaternion(-0.27132, -0.0235959, 0.0511585, 0.960839)
bones/57/position = Vector3(8.43332e-07, 39.9183, 4.43972e-06)
bones/57/rotation = Quaternion(0.463934, -0.266327, 0.111664, 0.837476)
bones/58/position = Vector3(3.17048e-07, 17.7724, -5.58669e-07)
bones/58/rotation = Quaternion(0.421666, -0.0738119, 0.0168123, 0.903585)
bones/59/position = Vector3(-4.17233e-07, 6.88901, 3.57628e-07)
bones/60/position = Vector3(-8.69879, -5.51937, -0.119319)
bones/60/rotation = Quaternion(-0.0724281, 0.298764, 0.822978, 0.477703)
bones/61/position = Vector3(9.54868e-07, 41.6601, 2.00778e-07)
bones/61/rotation = Quaternion(-0.865546, 0.0391123, -0.0780383, 0.493164)
bones/62/position = Vector3(-4.73908e-07, 39.8777, -2.77453e-08)
bones/62/rotation = Quaternion(0.469271, 0.247141, -0.104866, 0.841255)
bones/63/position = Vector3(2.39347e-06, 17.2103, 3.02906e-06)
bones/63/rotation = Quaternion(0.380398, 0.0499501, -0.0196552, 0.923264)
bones/64/position = Vector3(-1.85519e-06, 7.01135, 5.06636e-07)

[node name="Area3D" type="Area3D" parent="celebrating"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="celebrating/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21212, 0)
shape = SubResource("SphereShape3D_h5xax")

[connection signal="CarEntered" from="PassangerPickupArea" to="PassangerPickupArea/passanger" method="_on_passanger_pickup_area_car_entered"]
[connection signal="body_shape_entered" from="PassangerPickupArea" to="PassangerPickupArea" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="PassangerPickupArea" to="PassangerPickupArea" method="_on_body_shape_exited"]
[connection signal="PassangerPickup" from="PassangerPickupArea/passanger" to="." method="_on_passanger_passanger_pickup"]
[connection signal="PassangerPickup" from="PassangerPickupArea/passanger" to="PassangerPickupArea" method="_on_passanger_passanger_pickup"]
[connection signal="body_entered" from="PassangerPickupArea/passanger/Area3D" to="PassangerPickupArea/passanger" method="_on_area_3d_body_entered"]
[connection signal="body_shape_entered" from="Destination" to="Destination" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="Destination" to="Destination" method="_on_body_shape_exited"]
[connection signal="reachedDestination" from="Destination" to="." method="_on_destination_reached_destination"]
[connection signal="reachedDestination" from="Destination" to="PassangerPickupArea" method="_on_destination_reached_destination"]
[connection signal="body_entered" from="celebrating/Area3D" to="celebrating" method="_on_area_3d_body_entered"]

[editable path="PassangerPickupArea/passanger"]
[editable path="celebrating"]
